--- a/.github/workflows/Build-ImmortalWrt.yml
+++ b/.github/workflows/Build-ImmortalWrt.yml
@@ -54,9 +54,9 @@ jobs:
         CONFIG_FILE: https://raw.githubusercontent.com/MkQtS/OpenWrt-build/main/immortalwrt_config.txt
       run: |
         cd $OPENWRT_ROOT_PATH
-        sed -i 's/ImmortalWrt/OpenWrt/g' package/base-files/files/bin/config_generate
         BUILD_DATE=$(date -d "8 hour" -u +%Y-%m-%d)
-        curl -s $CONFIG_FILE | sed "s/VAR_BUILD_DATE/$BUILD_DATE/" > .config
+        sed -i "s/%D %V %C/$BUILD_DATE@%D %V %C/g" package/base-files/files/etc/openwrt_release
+        wget -O .config $CONFIG_FILE
         make defconfig
         cp ./.config ../referer/immortalwrt_config.txt
         sh ./scripts/diffconfig.sh > ../referer/diff_immortalwrt_config.txt
