--- a/.github/workflows/Build-ImmortalWrt.yml
+++ b/.github/workflows/Build-ImmortalWrt.yml
@@ -42,11 +42,9 @@ jobs:
 
     - name: Customize files
       run: |
-        cd $OPENWRT_ROOT_PATH
-        mkdir -p ./files/www/luci-static/argon/background
-        cd ./files/www/luci-static/argon/background
-        wget -q https://w.wallhaven.cc/full/4g/wallhaven-4gr9d0.jpg
-        wget -q https://w.wallhaven.cc/full/gj/wallhaven-gjly83.jpg
+        cd $OPENWRT_ROOT_PATH/feeds/luci/themes/luci-theme-argon/htdocs/luci-static/argon/img
+        rm ./bg1.jpg
+        wget -q -O bg1.jpg https://w.wallhaven.cc/full/4g/wallhaven-4gr9d0.jpg
 
     - name: Customize config
       env:
