Prevent potential problem

--- a/.github/workflows/Build-OpenWrt.yml
+++ b/.github/workflows/Build-OpenWrt.yml
@@ -47,9 +47,9 @@ jobs:
         cd $OPENWRT_ROOT_PATH
         BUILD_DATE=$(date -d "8 hour" -u +%Y-%m-%d)
         sed -i "s/%D %V %C/OpenWrt 22.03 built on $BUILD_DATE/g" package/base-files/files/etc/openwrt_release
-        wget -O .config $CONFIG_FILE
+        wget -q -O .config $CONFIG_FILE
         make defconfig
-        cp ./.config ../referer/openwrt_config.txt
+        cat ./.config > ../referer/openwrt_config.txt
         sh ./scripts/diffconfig.sh > ../referer/diff_openwrt_config.txt
 
     - name: Build firmware
@@ -83,6 +83,6 @@ jobs:
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add ./referer/openwrt_config.txt ./referer/diff_openwrt_config.txt
-        git commit -m "upload referer files"
+        git commit --allow-empty -m "upload referer files"
         git push origin main
 
