--- a/.github/workflows/Build-ImmortalWrt.yml
+++ b/.github/workflows/Build-ImmortalWrt.yml
@@ -54,9 +54,9 @@ jobs:
         BUILD_DATE=$(date -d "8 hour" -u +%Y-%m-%d)
         sed -i "s/%D %V %C/ImmortalWrt 21.02 built on $BUILD_DATE/g" package/base-files/files/etc/openwrt_release
         sed -i '2a\uci set luci.main.lang=zh_cn\nuci commit luci\n' package/emortal/default-settings/files/99-default-settings-chinese
-        wget -O .config $CONFIG_FILE
+        wget -q -O .config $CONFIG_FILE
         make defconfig
-        cp ./.config ../referer/immortalwrt_config.txt
+        cat ./.config > ../referer/immortalwrt_config.txt
         sh ./scripts/diffconfig.sh > ../referer/diff_immortalwrt_config.txt
 
     - name: Build firmware
@@ -90,6 +90,6 @@ jobs:
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add ./referer/immortalwrt_config.txt ./referer/diff_immortalwrt_config.txt
-        git commit -m "upload referer files"
+        git commit --allow-empty -m "upload referer files"
         git push origin main
 
