--- a/.github/workflows/Build-ImmortalWrt.yml
+++ b/.github/workflows/Build-ImmortalWrt.yml
@@ -9,7 +9,7 @@ jobs:
 
     env: 
       SOURCE_PROJECT: https://github.com/immortalwrt/immortalwrt
-      SOURCE_BRANCH: openwrt-21.02
+      SOURCE_BRANCH: master
       OPENWRT_ROOT_PATH: immortalwrt
 
     steps:
@@ -56,8 +56,8 @@ jobs:
         sed -i '2a\uci set luci.main.lang=zh_cn\nuci commit luci\n' package/emortal/default-settings/files/99-default-settings-chinese
         wget -q -O .config $CONFIG_FILE
         make defconfig
-        cat ./.config > ../referer/immortalwrt_config.txt
-        sh ./scripts/diffconfig.sh > ../referer/diff_immortalwrt_config.txt
+        cat ./.config > ../referer/immortalwrt_master_config.txt
+        sh ./scripts/diffconfig.sh > ../referer/diff_immortalwrt_master_config.txt
 
     - name: Build firmware
       run: |
@@ -89,7 +89,7 @@ jobs:
       run: |
         git config user.name github-actions
         git config user.email github-actions@github.com
-        git add ./referer/immortalwrt_config.txt ./referer/diff_immortalwrt_config.txt
+        git add ./referer/immortalwrt_master_config.txt ./referer/diff_immortalwrt_master_config.txt
         git commit --allow-empty -m "upload referer files"
         git push origin main
 
