--- a/.github/workflows/Build-ImmortalWrt-master.yml
+++ b/.github/workflows/Build-ImmortalWrt-master.yml
@@ -40,14 +40,12 @@ jobs:
         ./scripts/feeds install -a
 
     - name: Customize
-      env:
-        CONFIG_FILE: https://raw.githubusercontent.com/MkQtS/OpenWrt-build/main/immortalwrt_config.txt
       run: |
         cd $OPENWRT_ROOT_PATH
         BUILD_DATE=$(date -d "8 hour" -u +%Y-%m-%d)
         sed -i "s/%D %V %C/ImmortalWrt master @$BUILD_DATE/g" package/base-files/files/etc/openwrt_release
         sed -i '2a\uci set luci.main.lang=zh_cn\nuci commit luci\n' package/emortal/default-settings/files/99-default-settings-chinese
-        wget -q -O .config $CONFIG_FILE
+        cp ../immortalwrt_config.txt ./.config
         make defconfig
         cd ./feeds/luci/themes/luci-theme-argon/htdocs/luci-static/argon/img
         rm ./bg1.jpg
