--- a/.github/workflows/Build-ImmortalWrt.yml
+++ b/.github/workflows/Build-ImmortalWrt.yml
@@ -63,25 +63,25 @@ jobs:
         git commit --allow-empty -m "upload referer files"
         git push origin main
 
-    #- name: Build firmware
-    #  run: |
-    #    cd $OPENWRT_ROOT_PATH
-    #    echo -e "$(nproc) thread compile"
-    #    make -j $(nproc) download world
+    - name: Build firmware
+      run: |
+        cd $OPENWRT_ROOT_PATH
+        echo -e "$(nproc) thread compile"
+        make -j $(nproc) download world
 
-    #- name : Upload ext4-efi.img to artifact
-    #  uses: actions/upload-artifact@v3
-    #  with:
-    #    name: ext4-combined
-    #    path: ${{ env.OPENWRT_ROOT_PATH }}/bin/targets/x86/64/*-ext4-combined-efi.img.gz
-    #    retention-days: 3
+    - name : Upload ext4-efi.img to artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: ext4-combined
+        path: ${{ env.OPENWRT_ROOT_PATH }}/bin/targets/x86/64/*-ext4-combined-efi.img.gz
+        retention-days: 3
 
-    #- name : Upload squashfs-efi.img to artifact
-    #  uses: actions/upload-artifact@v3
-    #  with:
-    #    name: squashfs-combined
-    #    path: ${{ env.OPENWRT_ROOT_PATH }}/bin/targets/x86/64/*-squashfs-combined-efi.img.gz
-    #    retention-days: 3
+    - name : Upload squashfs-efi.img to artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: squashfs-combined
+        path: ${{ env.OPENWRT_ROOT_PATH }}/bin/targets/x86/64/*-squashfs-combined-efi.img.gz
+        retention-days: 3
 
     #- name : Upload all to artifact
     #  uses: actions/upload-artifact@v3
