--- a/.github/workflows/Build-OpenWrt.yml
+++ b/.github/workflows/Build-OpenWrt.yml
@@ -27,7 +27,7 @@ jobs:
         bzip2 ccache cmake cpio curl device-tree-compiler ecj fastjar flex gawk gettext gcc-multilib g++-multilib \
         git gperf haveged help2man intltool lib32gcc1 libc6-dev-i386 libelf-dev libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev \
         libmpfr-dev libncurses5-dev libncursesw5 libncursesw5-dev libreadline-dev libssl-dev libtool lrzsz \
-        mkisofs msmtp nano ninja-build p7zip p7zip-full patch pkgconf python2.7 python3 python3-pip python3-ply \
+        mkisofs msmtp nano ninja-build p7zip p7zip-full patch pkgconf python3 python3-pip python3-ply \
         python-docutils qemu-utils re2c rsync scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip \
         vim wget xmlto xxd zlib1g-dev
         sudo -E apt-get -qq autoremove --purge
@@ -40,49 +40,45 @@ jobs:
         ./scripts/feeds update -a
         ./scripts/feeds install -a
 
-    - name: Customize config
-      env:
-        CONFIG_FILE: https://raw.githubusercontent.com/MkQtS/OpenWrt-build/main/openwrt_config.txt
+    - name: Customize
       run: |
         cd $OPENWRT_ROOT_PATH
         BUILD_DATE=$(date -d "8 hour" -u +%Y-%m-%d)
-        sed -i "s/%D %V %C/OpenWrt 22.03 built on $BUILD_DATE/g" package/base-files/files/etc/openwrt_release
-        wget -q -O .config $CONFIG_FILE
+        sed -i "s/%D %V %C/OpenWrt 22.03 @$BUILD_DATE/g" package/base-files/files/etc/openwrt_release
+        cp ../openwrt_config.txt ./.config
         make defconfig
-        cat ./.config > ../referer/openwrt_config.txt
-        sh ./scripts/diffconfig.sh > ../referer/diff_openwrt_config.txt
-
-    - name: Build firmware
-      run: |
-        cd $OPENWRT_ROOT_PATH
-        make -j $(nproc) download world
-
-    - name : Upload ext4-efi.img to artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: ext4-combined
-        path: ${{ env.OPENWRT_ROOT_PATH }}/bin/targets/x86/64/*-ext4-combined-efi.img.gz
-        retention-days: 3
-
-    #- name : Upload squashfs-efi.img to artifact
-    #  uses: actions/upload-artifact@v3
-    #  with:
-    #    name: squashfs-combined
-    #    path: ${{ env.OPENWRT_ROOT_PATH }}/bin/targets/x86/64/*-squashfs-combined-efi.img.gz
-    #    retention-days: 3
-
-    #- name : Upload all to artifact
-    #  uses: actions/upload-artifact@v3
-    #  with:
-    #    name: ${{ env.OPENWRT_ROOT_PATH }}
-    #    path: ${{ env.OPENWRT_ROOT_PATH }}/bin/targets/x86/64
-    #    retention-days: 3
 
     - name: Commit referer files
       run: |
+        cd $OPENWRT_ROOT_PATH
+        cat ./.config > ../referer/openwrt_config.txt
+        sh ./scripts/diffconfig.sh > ../referer/diff_openwrt_config.txt
+        cd ..
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add ./referer/openwrt_config.txt ./referer/diff_openwrt_config.txt
         git commit --allow-empty -m "upload referer files"
         git push origin main
+
+    - name: Build firmware
+      run: |
+        cd $OPENWRT_ROOT_PATH
+        echo -e "$(nproc) thread compile"
+        make -j $(nproc) download world
+
+    - name : Upload firmware to artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: firmware
+        path: |
+          ${{ env.OPENWRT_ROOT_PATH }}/bin/targets/ramips/mt7621/*-initramfs-kernel.bin
+          ${{ env.OPENWRT_ROOT_PATH }}/bin/targets/ramips/mt7621/*-squashfs-sysupgrade.bin
+        retention-days: 3
+
+    #- name : Upload all to artifact
+    #  uses: actions/upload-artifact@v3
+    #  with:
+    #    name: ${{ env.OPENWRT_ROOT_PATH }}
+    #    path: ${{ env.OPENWRT_ROOT_PATH }}/bin/targets/ramips/mt7621
+    #    retention-days: 3
 
