--- a/.github/workflows/Build-ImmortalWrt.yml
+++ b/.github/workflows/Build-ImmortalWrt.yml
@@ -3,69 +3,70 @@ name: Build ImmortalWrt
 on:
   workflow_dispatch:
 
+env:
+  SOURCE_BRANCH: openwrt-21.02
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    env:
-      SOURCE_PROJECT: https://github.com/immortalwrt/immortalwrt
-      SOURCE_BRANCH: openwrt-21.02
-      OPENWRT_ROOT_PATH: immortalwrt
-
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-
     - name: Initialize environment
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
-        sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
-        sudo -E apt-get -qq update
-        sudo -E apt-get -qq install ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
-        bzip2 ccache cmake cpio curl device-tree-compiler ecj fastjar flex gawk gettext gcc-multilib g++-multilib \
-        git gperf haveged help2man intltool lib32gcc1 libc6-dev-i386 libelf-dev libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev \
-        libmpfr-dev libncurses5-dev libncursesw5 libncursesw5-dev libreadline-dev libssl-dev libtool lrzsz \
-        mkisofs msmtp nano ninja-build p7zip p7zip-full patch pkgconf python3 python3-pip python3-ply \
-        python-docutils qemu-utils re2c rsync scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip \
-        vim wget xmlto xxd zlib1g-dev
-        sudo -E apt-get -qq autoremove --purge
-        sudo -E apt-get -qq clean
+        sudo -E swapoff -a
+        sudo -E rm -f /swapfile
+        sudo -E docker image prune -a -f
+        sudo -E apt -y autoremove --purge
+        sudo -E apt -y clean
+        sudo -E rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
+        sudo -E apt -y update
+        sudo -E apt -y install asciidoc autoconf automake autopoint binutils build-essential bzip2 ccache curl device-tree-compiler ecj fastjar file flex g++ g++-multilib gawk gcc gcc-multilib gettext git gperf java-propose-classpath lib32gcc1 libc6-dev-i386 libelf-dev libglib2.0-dev libncurses5-dev libncursesw5-dev libreadline-dev libssl-dev libtool p7zip-full patch pkgconf python3 python3-pip python3-ply qemu-utils rsync scons squashfs-tools subversion swig time uglifyjs unzip wget xsltproc zlib1g-dev 
+        sudo -E apt -y clean
 
-    - name: Clone source & Install feeds
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Get source code
+      uses: actions/checkout@v3
+      with:
+        repository: immortalwrt/immortalwrt
+        ref: ${{ env.SOURCE_BRANCH }}
+        path: 'openwrt'
+
+    - name: Install & Update feeds
       run: |
-        git clone -b $SOURCE_BRANCH --depth 1 $SOURCE_PROJECT
-        cd $OPENWRT_ROOT_PATH
+        cd openwrt
         ./scripts/feeds update -a
         ./scripts/feeds install -a
 
     - name: Customize
       run: |
-        cd $OPENWRT_ROOT_PATH
+        cd openwrt
         BUILD_DATE=$(date -d "8 hour" -u +%Y-%m-%d)
         sed -i "s/%D %V %C/ImmortalWrt 21.02 @$BUILD_DATE/g" package/base-files/files/etc/openwrt_release
-        sed -i '2a\uci set luci.main.lang=zh_cn\nuci commit luci\n' package/emortal/default-settings/files/99-default-settings-chinese
-        cp ../immortalwrt_config.txt ./.config
+        sed -i 's/luci\.main\.lang=auto/luci\.main\.lang=zh_cn/g' package/emortal/default-settings/files/99-default-settings
+        cp ../configs/immortalwrt_config.txt ./.config
         make defconfig
-        cd ./feeds/luci/themes/luci-theme-argon/htdocs/luci-static/argon/img
-        rm ./bg1.jpg
-        wget -q -O bg1.jpg https://w.wallhaven.cc/full/dp/wallhaven-dpepjo.jpg
+        rm ./feeds/luci/themes/luci-theme-argon/htdocs/luci-static/argon/img/bg1.jpg
+        wget -q -O ./feeds/luci/themes/luci-theme-argon/htdocs/luci-static/argon/img/bg1.jpg https://w.wallhaven.cc/full/dp/wallhaven-dpepjo.jpg
 
-    - name: Commit referer files
+    - name: Commit config files
       run: |
-        cd $OPENWRT_ROOT_PATH
-        cat ./.config > ../referer/immortalwrt_config.txt
-        sh ./scripts/diffconfig.sh > ../referer/diff_immortalwrt_config.txt
+        cd openwrt
+        cat ./.config > ../configs/all_immortalwrt_config.txt
+        sh ./scripts/diffconfig.sh > ../configs/diff_immortalwrt_config.txt
         cd ..
         git config user.name github-actions
         git config user.email github-actions@github.com
-        git add ./referer/immortalwrt_config.txt ./referer/diff_immortalwrt_config.txt
-        git commit --allow-empty -m "upload referer files"
+        git add ./configs/all_immortalwrt_config.txt ./configs/diff_immortalwrt_config.txt
+        git commit --allow-empty -m "Upload config files"
         git push origin main
 
     - name: Build firmware
       run: |
-        cd $OPENWRT_ROOT_PATH
+        cd openwrt
         echo -e "$(nproc) thread compile"
         make -j $(nproc) download world
 
@@ -73,20 +74,20 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: ext4-combined
-        path: ${{ env.OPENWRT_ROOT_PATH }}/bin/targets/x86/64/*-ext4-combined-efi.img.gz
+        path: openwrt/bin/targets/x86/64/*-ext4-combined-efi.img.gz
         retention-days: 3
 
     - name : Upload squashfs-efi.img to artifact
       uses: actions/upload-artifact@v3
       with:
         name: squashfs-combined
-        path: ${{ env.OPENWRT_ROOT_PATH }}/bin/targets/x86/64/*-squashfs-combined-efi.img.gz
+        path: openwrt/bin/targets/x86/64/*-squashfs-combined-efi.img.gz
         retention-days: 3
 
     #- name : Upload all to artifact
     #  uses: actions/upload-artifact@v3
     #  with:
-    #    name: ${{ env.OPENWRT_ROOT_PATH }}
-    #    path: ${{ env.OPENWRT_ROOT_PATH }}/bin/targets/x86/64
+    #    name: openwrt
+    #    path: openwrt/bin/targets/x86/64
     #    retention-days: 3
 
