--- a/.github/workflows/Build-OpenWrt.yml
+++ b/.github/workflows/Build-OpenWrt.yml
@@ -3,66 +3,67 @@ name: Build OpenWrt
 on:
   workflow_dispatch:
 
+env:
+  SOURCE_BRANCH: openwrt-22.03
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    env:
-      SOURCE_PROJECT: https://github.com/openwrt/openwrt
-      SOURCE_BRANCH: openwrt-22.03
-      OPENWRT_ROOT_PATH: openwrt
-
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-
     - name: Initialize environment
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
-        sudo -E ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
-        sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
-        sudo -E apt-get -qq update
-        sudo -E apt-get -qq install ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
-        bzip2 ccache cmake cpio curl device-tree-compiler ecj fastjar flex gawk gettext gcc-multilib g++-multilib \
-        git gperf haveged help2man intltool lib32gcc1 libc6-dev-i386 libelf-dev libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev \
-        libmpfr-dev libncurses5-dev libncursesw5 libncursesw5-dev libreadline-dev libssl-dev libtool lrzsz \
-        mkisofs msmtp nano ninja-build p7zip p7zip-full patch pkgconf python3 python3-pip python3-ply \
-        python-docutils qemu-utils re2c rsync scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip \
-        vim wget xmlto xxd zlib1g-dev
-        sudo -E apt-get -qq autoremove --purge
-        sudo -E apt-get -qq clean
+        sudo -E swapoff -a
+        sudo -E rm -f /swapfile
+        sudo -E docker image prune -a -f
+        sudo -E apt -y autoremove --purge
+        sudo -E apt -y clean
+        sudo -E rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
+        sudo -E apt -y update
+        sudo -E apt -y install asciidoc autoconf automake autopoint binutils build-essential bzip2 ccache curl device-tree-compiler ecj fastjar file flex g++ g++-multilib gawk gcc gcc-multilib gettext git gperf java-propose-classpath lib32gcc1 libc6-dev-i386 libelf-dev libglib2.0-dev libncurses5-dev libncursesw5-dev libreadline-dev libssl-dev libtool p7zip-full patch pkgconf python3 python3-pip python3-ply qemu-utils rsync scons squashfs-tools subversion swig time uglifyjs unzip wget xsltproc zlib1g-dev 
+        sudo -E apt -y clean
 
-    - name: Clone source code & Install feeds
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Get source code
+      uses: actions/checkout@v3
+      with:
+        repository: openwrt/openwrt
+        ref: ${{ env.SOURCE_BRANCH }}
+        path: 'openwrt'
+
+    - name: Install & Update feeds
       run: |
-        git clone -b $SOURCE_BRANCH --depth 1 $SOURCE_PROJECT
-        cd $OPENWRT_ROOT_PATH
+        cd openwrt
         ./scripts/feeds update -a
         ./scripts/feeds install -a
 
     - name: Customize
       run: |
-        cd $OPENWRT_ROOT_PATH
+        cd openwrt
         BUILD_DATE=$(date -d "8 hour" -u +%Y-%m-%d)
         sed -i "s/%D %V %C/OpenWrt 22.03 @$BUILD_DATE/g" package/base-files/files/etc/openwrt_release
-        cp ../openwrt_config.txt ./.config
+        cp ../configs/openwrt_config.txt ./.config
         make defconfig
 
-    - name: Commit referer files
+    - name: Commit config files
       run: |
-        cd $OPENWRT_ROOT_PATH
-        cat ./.config > ../referer/openwrt_config.txt
-        sh ./scripts/diffconfig.sh > ../referer/diff_openwrt_config.txt
+        cd openwrt
+        cat ./.config > ../configs/all_openwrt_config.txt
+        sh ./scripts/diffconfig.sh > ../configs/diff_openwrt_config.txt
         cd ..
         git config user.name github-actions
         git config user.email github-actions@github.com
-        git add ./referer/openwrt_config.txt ./referer/diff_openwrt_config.txt
-        git commit --allow-empty -m "upload referer files"
+        git add ./configs/all_openwrt_config.txt ./configs/diff_openwrt_config.txt
+        git commit --allow-empty -m "Upload config files"
         git push origin main
 
     - name: Build firmware
       run: |
-        cd $OPENWRT_ROOT_PATH
+        cd openwrt
         echo -e "$(nproc) thread compile"
         make -j $(nproc) download world
 
@@ -71,14 +72,14 @@ jobs:
       with:
         name: firmware
         path: |
-          ${{ env.OPENWRT_ROOT_PATH }}/bin/targets/ramips/mt7621/*-initramfs-kernel.bin
-          ${{ env.OPENWRT_ROOT_PATH }}/bin/targets/ramips/mt7621/*-squashfs-sysupgrade.bin
+          openwrt/bin/targets/ramips/mt7621/*-initramfs-kernel.bin
+          openwrt/bin/targets/ramips/mt7621/*-squashfs-sysupgrade.bin
         retention-days: 3
 
     #- name : Upload all to artifact
     #  uses: actions/upload-artifact@v3
     #  with:
-    #    name: ${{ env.OPENWRT_ROOT_PATH }}
-    #    path: ${{ env.OPENWRT_ROOT_PATH }}/bin/targets/ramips/mt7621
+    #    name: openwrt
+    #    path: openwrt/bin/targets/ramips/mt7621
     #    retention-days: 3
 
