--- a/.github/workflows/Build-ImmortalWrt.yml
+++ b/.github/workflows/Build-ImmortalWrt.yml
@@ -15,6 +15,9 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
+        sudo -E swapoff -a
+        sudo -E rm -f /swapfile
+        sudo -E docker image prune -a -f
         sudo -E apt -y autoremove --purge
         sudo -E apt -y clean
         sudo -E rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
@@ -43,7 +46,7 @@ jobs:
       run: |
         BUILD_DATE=$(date -d "8 hour" -u +%Y-%m-%d)
         sed -i "s/%D %V %C/ImmortalWrt 21.02 @$BUILD_DATE/g" package/base-files/files/etc/openwrt_release
-        cp ../zju_localize ./package/base-files/files/etc/uci-defaults/
+        cp ../custom/zju_localize ./package/base-files/files/etc/uci-defaults/
         rm ./feeds/luci/themes/luci-theme-argon/htdocs/luci-static/argon/img/bg1.jpg
         wget -q -O ./feeds/luci/themes/luci-theme-argon/htdocs/luci-static/argon/img/bg1.jpg https://w.wallhaven.cc/full/dp/wallhaven-dpepjo.jpg
         cp ../configs/immortalwrt_config.txt ./.config
@@ -62,8 +65,8 @@ jobs:
     - name: Build firmware
       working-directory: ./openwrt
       run: |
-        make download
-        make -j $(($(nproc)+1))
+        echo -e "$(($(nproc)+1)) thread compile"
+        make -j $(($(nproc)+1)) download world
 
     - name : Upload ext4-efi.img to artifact
       uses: actions/upload-artifact@v3
