--- a/.github/workflows/Build-RM2100.yml
+++ b/.github/workflows/Build-RM2100.yml
@@ -1,10 +1,12 @@
-name: Build OpenWrt
+name: Build RM-AC2100
 
 on:
   workflow_dispatch:
 
 env:
+  SOURCE_PROJECT: openwrt/openwrt
   SOURCE_BRANCH: openwrt-22.03
+  VERSION_TAG: OpenWrt 22.03
 
 jobs:
   build:
@@ -17,7 +19,6 @@ jobs:
       run: |
         sudo -E swapoff -a
         sudo -E rm -f /swapfile
-        sudo -E docker image prune -a -f
         sudo -E apt -y autoremove --purge
         sudo -E apt -y clean
         sudo -E rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
@@ -31,11 +32,11 @@ jobs:
     - name: Get source code
       uses: actions/checkout@v3
       with:
-        repository: openwrt/openwrt
+        repository: ${{ env.SOURCE_PROJECT }}
         ref: ${{ env.SOURCE_BRANCH }}
         path: 'openwrt'
 
-    - name: Install & Update feeds
+    - name: Update & Install feeds
       working-directory: ./openwrt
       run: |
         ./scripts/feeds update -a
@@ -45,24 +46,39 @@ jobs:
       working-directory: ./openwrt
       run: |
         BUILD_DATE=$(date -d "8 hour" -u +%Y-%m-%d)
-        sed -i "s/%D %V %C/OpenWrt 22.03 @$BUILD_DATE/g" package/base-files/files/etc/openwrt_release
-        cp ../configs/openwrt_config.txt ./.config
+        sed -i "s/%D %V %C/$VERSION_TAG @$BUILD_DATE/g" package/base-files/files/etc/openwrt_release
+        cp ../configs/RM2100_config.txt ./.config
         make defconfig
-        cat ./.config > ../configs/all_openwrt_config.txt
-        sh ./scripts/diffconfig.sh > ../configs/diff_openwrt_config.txt
+        cp ./.config ../configs/new_all_RM2100_config.txt
+        sh ./scripts/diffconfig.sh > ../configs/new_diff_RM2100_config.txt
+
+    - name: Diff config
+      id: diff_config
+      working-directory: ./configs
+      run: |
+        if [ "$(diff -q new_all_RM2100_config.txt all_RM2100_config.txt)" != "" ]
+        then
+          echo "::set-output name=state::changed"
+          rm -f all_RM2100_config.txt diff_RM2100_config.txt
+          mv new_all_RM2100_config.txt all_RM2100_config.txt
+          mv new_diff_RM2100_config.txt diff_RM2100_config.txt
+        else
+          echo "Configs have not changed."
+        fi
 
     - name: Commit config files
+      if: steps.diff_config.outputs.state == 'changed'
       run: |
         git config user.name github-actions
         git config user.email github-actions@github.com
-        git add ./configs/all_openwrt_config.txt ./configs/diff_openwrt_config.txt
-        git commit --allow-empty -m "Upload config files"
+        git add ./configs/all_RM2100_config.txt ./configs/diff_RM2100_config.txt
+        git commit -m "Update config files"
         git push origin main
 
     - name: Build firmware
       working-directory: ./openwrt
       run: |
-        echo -e "$(($(nproc)+1)) thread compile"
+        echo -e "Using $(($(nproc)+1)) threads to compile."
         make -j $(($(nproc)+1)) download world
 
     - name : Upload firmware to artifact
@@ -77,7 +93,7 @@ jobs:
     #- name : Upload all to artifact
     #  uses: actions/upload-artifact@v3
     #  with:
-    #    name: openwrt
+    #    name: RM2100_openwrt
     #    path: openwrt/bin/targets/ramips/mt7621
     #    retention-days: 3
 
