--- a/.github/workflows/Build-X64.yml
+++ b/.github/workflows/Build-X64.yml
@@ -36,20 +36,28 @@ jobs:
         ref: ${{ env.SOURCE_BRANCH }}
         path: 'openwrt'
 
+    - name: Action Cache
+      id: action-chche
+      uses: actions/cache@v3
+      with:
+        path: ./openwrt/action_cache.tar
+        key: openwrt-x64-${{ hashFiles('configs/X64_config.txt') }}
+
     #- name: Action Cache
     #  id: action-chche
     #  uses: actions/cache@v3
     #  with:
-    #    path: ./openwrt/action_cache.tar
-    #    key: openwrt-x64-${{ hashFiles('configs/X64_config.txt') }}
+    #    path: ./openwrt/action_cache_${{ hashFiles('.github/X64_action_cache') }}.tar
+    #    key: openwrt-x64-${{ hashFiles('.github/X64_action_cache') }}
 
-    #- name: Restore cache files
-    #  if: steps.action-chche.outputs.cache-hit == 'true'
-    #  working-directory: ./openwrt
-    #  run: |
-    #    tar xjf action_cache.tar
-    #    mv ./action_cache/build_dir/ ./action_cache/dl/ ./action_cache/staging_dir/ -t ./
-    #    rm -f ./action_cache.tar && rm -rf ./action_cache/
+    - name: Restore cache files
+      if: steps.action-chche.outputs.cache-hit == 'true'
+      working-directory: ./openwrt
+      run: |
+        tar -xjvf action_cache.tar
+        #tar -xzvf action_cache_*.tar
+        mv ./action_cache/build_dir/ ./action_cache/dl/ ./action_cache/staging_dir/ -t ./
+        rm -f ./action_cache.tar && rm -rf ./action_cache/
 
     - name: Update & Install feeds
       working-directory: ./openwrt
@@ -127,13 +135,22 @@ jobs:
         make clean
         mkdir ./action_cache
         mv ./build_dir/ ./dl/ ./staging_dir/ -t ./action_cache
-        tar cjf ./action_cache.tar ./action_cache
-        echo "The size of action_cache.tar: $(du -h build_cache.tar)"
+        tar -czvf ./action_cache.tar ./action_cache
+        rm -rf ./action_cache
 
-    - name: Action Cache
-      id: action-chche
+    - name: Commit cache mark
+      run: |
+        echo "Last cache mark: $(date -d "8 hour" -u +"%Y-%m-%d %H:%M")" > ./.github/X64_action_cache
+        mv ./openwrt/action_cache.tar ./openwrt/action_cache_${{ hashFiles('./.github/X64_action_cache') }}.tar
+        git config user.name github-actions
+        git config user.email github-actions@github.com
+        git add ./.github/X64_action_cache
+        git commit -m "Update cache mark"
+        git push origin main
+
+    - name: Renew action Cache
       uses: actions/cache@v3
       with:
-        path: ./openwrt/action_cache.tar
+        path: ./openwrt/action_cache_${{ hashFiles('.github/X64_action_cache') }}.tar
         key: openwrt-x64-${{ hashFiles('configs/X64_config.txt') }}
 
