try to fix cache

--- a/.github/workflows/Build-X64.yml
+++ b/.github/workflows/Build-X64.yml
@@ -48,16 +48,17 @@ jobs:
     #  uses: actions/cache@v3
     #  with:
     #    path: ./openwrt/action_cache_${{ hashFiles('.github/X64_action_cache') }}.tar
-    #    key: openwrt-x64-${{ hashFiles('.github/X64_action_cache') }}
+    #    key: openwrt-x64-${{ hashFiles('./.github/X64_action_cache') }}
 
     - name: Restore cache files
       if: steps.action-chche.outputs.cache-hit == 'true'
       working-directory: ./openwrt
       run: |
-        tar -xjvf action_cache.tar
-        #tar -xzvf action_cache_*.tar
+        tar -xjf action_cache.tar
+        #tar -xf action_cache_*.tar
         mv ./action_cache/build_dir/ ./action_cache/dl/ ./action_cache/staging_dir/ -t ./
         rm -f ./action_cache.tar && rm -rf ./action_cache/
+        echo "$ls -lh"
 
     - name: Update & Install feeds
       working-directory: ./openwrt
@@ -102,25 +103,25 @@ jobs:
         git commit -m "Update config files"
         git push origin main
 
-    - name: Build firmware
-      working-directory: ./openwrt
-      run: |
-        echo -e "Using $(($(nproc)+1)) threads to compile."
-        make -j $(($(nproc)+1)) download world
+    #- name: Build firmware
+    #  working-directory: ./openwrt
+    #  run: |
+    #    echo -e "Using $(($(nproc)+1)) threads to compile."
+    #    make -j $(($(nproc)+1)) download world
 
-    - name : Upload ext4-efi.img to artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: ext4-combined
-        path: openwrt/bin/targets/x86/64/*-ext4-combined-efi.img.gz
-        retention-days: 3
+    #- name : Upload ext4-efi.img to artifact
+    #  uses: actions/upload-artifact@v3
+    #  with:
+    #    name: ext4-combined
+    #    path: openwrt/bin/targets/x86/64/*-ext4-combined-efi.img.gz
+    #    retention-days: 3
 
-    - name : Upload squashfs-efi.img to artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: squashfs-combined
-        path: openwrt/bin/targets/x86/64/*-squashfs-combined-efi.img.gz
-        retention-days: 3
+    #- name : Upload squashfs-efi.img to artifact
+    #  uses: actions/upload-artifact@v3
+    #  with:
+    #    name: squashfs-combined
+    #    path: openwrt/bin/targets/x86/64/*-squashfs-combined-efi.img.gz
+    #    retention-days: 3
 
     #- name : Upload all to artifact
     #  uses: actions/upload-artifact@v3
@@ -135,22 +136,22 @@ jobs:
         make clean
         mkdir ./action_cache
         mv ./build_dir/ ./dl/ ./staging_dir/ -t ./action_cache
-        tar -czvf ./action_cache.tar ./action_cache
+        tar -cf ./action_cache.tar ./action_cache
         rm -rf ./action_cache
 
     - name: Commit cache mark
       run: |
         echo "Last cache mark: $(date -d "8 hour" -u +"%Y-%m-%d %H:%M")" > ./.github/X64_action_cache
-        mv ./openwrt/action_cache.tar ./openwrt/action_cache_${{ hashFiles('./.github/X64_action_cache') }}.tar
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add ./.github/X64_action_cache
         git commit -m "Update cache mark"
         git push origin main
+        mv ./openwrt/action_cache.tar ./openwrt/action_cache_${{ hashFiles('./.github/X64_action_cache') }}.tar
 
     - name: Renew action Cache
       uses: actions/cache@v3
       with:
-        path: ./openwrt/action_cache_${{ hashFiles('.github/X64_action_cache') }}.tar
-        key: openwrt-x64-${{ hashFiles('configs/X64_config.txt') }}
+        path: ./openwrt/action_cache_${{ hashFiles('./.github/X64_action_cache') }}.tar
+        key: openwrt-x64-${{ hashFiles('./.github/X64_action_cache') }}
 
